package at.omi.blatt6.a4.sensor.example.observer;

public interface IObserver {

    void update();
}
