@startuml

title __BLATT6_HANDOUT's Class Diagram__\n

  namespace at.omi.blatt6.a3.smarthome.factory {
    abstract class at.omi.blatt6.a3.smarthome.factory.DefaultDeviceImpl {
    }
  }
  

  namespace at.omi.blatt6.a3.smarthome.factory {
    class at.omi.blatt6.a3.smarthome.factory.Main {
    }
  }
  

  namespace at.omi.blatt6.a3.smarthome.factory {
    class at.omi.blatt6.a3.smarthome.factory.SensorImpl {
    }
  }
  

  namespace at.omi.blatt6.a3.smarthome.factory {
    class at.omi.blatt6.a3.smarthome.factory.SimulatedLight1Adapter {
    }
  }
  

  namespace at.omi.blatt6.a3.smarthome.factory {
    class at.omi.blatt6.a3.smarthome.factory.SimulatedLight2Adapter {
    }
  }
  

  namespace at.omi.blatt6.a3.smarthome.factory {
    abstract class at.omi.blatt6.a3.smarthome.factory.SmarthomeManager {
    }
  }
  

  namespace at.omi.blatt6.a3.smarthome.factory {
    class at.omi.blatt6.a3.smarthome.factory.SmarthomeManagerFactory {
    }
  }
  

  namespace at.omi.blatt6.a4.sensor.example.observer {
    interface at.omi.blatt6.a4.sensor.example.observer.IObservable {
    }
  }
  

  namespace at.omi.blatt6.a4.sensor.example.observer {
    interface at.omi.blatt6.a4.sensor.example.observer.IObserver {
    }
  }
  

  namespace at.omi.blatt6.a4.sensor.example.observer {
    class at.omi.blatt6.a4.sensor.example.observer.SomeSensor {
    }
  }
  

  namespace at.omi.blatt6.a4.sensor.example.observer {
    class at.omi.blatt6.a4.sensor.example.observer.SomeSensorReader {
    }
  }
  

  namespace at.omi.blatt6.a4.sensor.example.observer {
    class at.omi.blatt6.a4.sensor.example.observer.Test {
    }
  }
  

  at.omi.blatt6.a3.smarthome.factory.DefaultDeviceImpl .up.|> at.omi.smarthome.interfaces.Device
  at.omi.blatt6.a3.smarthome.factory.SensorImpl .up.|> at.omi.smarthome.interfaces.Sensor
  at.omi.blatt6.a3.smarthome.factory.SensorImpl -up-|> at.omi.blatt6.a3.smarthome.factory.DefaultDeviceImpl
  at.omi.blatt6.a3.smarthome.factory.SimulatedLight1Adapter .up.|> at.omi.smarthome.interfaces.Actor
  at.omi.blatt6.a3.smarthome.factory.SimulatedLight1Adapter -up-|> at.omi.smarthome.simulation1.SimulatedLight1
  at.omi.blatt6.a3.smarthome.factory.SimulatedLight2Adapter .up.|> at.omi.smarthome.interfaces.Actor
  at.omi.blatt6.a3.smarthome.factory.SimulatedLight2Adapter -up-|> at.omi.smarthome.simulation2.SimulatedLight2
  at.omi.blatt6.a3.smarthome.factory.SmarthomeManagerFactory -up-|> at.omi.blatt6.a3.smarthome.factory.SmarthomeManager
  at.omi.blatt6.a4.sensor.example.observer.SomeSensor .up.|> at.omi.blatt6.a4.sensor.example.observer.IObservable
  at.omi.blatt6.a4.sensor.example.observer.SomeSensorReader .up.|> at.omi.blatt6.a4.sensor.example.observer.IObserver
  at.omi.blatt6.a4.sensor.example.observer.SomeSensorReader o-- at.omi.blatt6.a4.sensor.example.observer.SomeSensor : sensor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
